# VoiceProcessor_Oboe

./: settings.gradle.kts
app/src/main/cpp/: AudioConfig.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/oboe/: CMakeLists.txt
app/src/main/cpp/oboe/apps/OboeTester/: build.gradle
app/src/main/cpp/oboe/apps/OboeTester/app/: CMakeLists.txt  build.gradle
app/src/main/cpp/oboe/apps/fxlab/: build.gradle
app/src/main/cpp/oboe/apps/fxlab/app/: CMakeLists.txt  build.gradle
app/src/main/cpp/oboe/samples/: build.gradle  settings.gradle
app/src/main/cpp/oboe/samples/LiveEffect/: build.gradle
app/src/main/cpp/oboe/samples/LiveEffect/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/oboe/samples/MegaDrone/: build.gradle
app/src/main/cpp/oboe/samples/RhythmGame/: CMakeLists.txt  build.gradle
app/src/main/cpp/oboe/samples/RhythmGame/src/main/cpp/: Game.cpp
app/src/main/cpp/oboe/samples/RhythmGame/test/: CMakeLists.txt
app/src/main/cpp/oboe/samples/SoundBoard/: build.gradle
app/src/main/cpp/oboe/samples/drumthumper/: build.gradle
app/src/main/cpp/oboe/samples/drumthumper/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/oboe/samples/hello-oboe/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/oboe/samples/iolib/: build.gradle
app/src/main/cpp/oboe/samples/minimaloboe/: build.gradle
app/src/main/cpp/oboe/samples/parselib/: build.gradle
app/src/main/cpp/oboe/tests/: CMakeLists.txt
app/src/main/cpp/oboe/tests/UnitTestRunner/: build.gradle
app/src/main/cpp/oboe/tests/UnitTestRunner/app/: build.gradle
(+17 files in other folders)
